--- a/chevy/traverse/Venetian.html
+++ b/chevy/traverse/Venetian.html
@@ -2275,7 +2275,7 @@ El sistema MyLink te permite disfrutar de tu Smartphone en la pantalla táctil d
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/sSMKjh7.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/k6WGAX0.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/pbyTCM3.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/uTG1Ja6.jpg"></dataimg>
 <!--#/#-->
@@ -2391,7 +2391,7 @@ customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
 name: sSMKjh7.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: k6WGAX0.jpg; fileId: ; sourceTypeId: externalUrl;
+name: pbyTCM3.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: uTG1Ja6.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
