--- a/vodafone bit/statico011.html
+++ b/vodafone bit/statico011.html
@@ -262,7 +262,7 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-cover"> 
-                <img src="https://i.imgur.com/hveYfQd.png" alt="" /> 
+                <img src="https://i.imgur.com/DlmdNBc.png" alt="" /> 
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
