--- a/vodafone bit/statico012.html
+++ b/vodafone bit/statico012.html
@@ -262,7 +262,7 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-cover"> 
-                <img src="https://i.imgur.com/hveYfQd.png" alt="" /> 
+                <img src="https://i.imgur.com/2mqDELS.png" alt="" /> 
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
@@ -270,7 +270,7 @@
                 </div>
                 <div style="margin-top:25px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="float:center; color:#2d363b;line-height:1.1; font-size:22px;">
+                        <span class="bzm_text_title  bzm_text_bold" style="float:center; color:#2d363b;line-height:1.1; font-size:18px;">
 						   Vodafone bit. <br> Únicamente lo que necesitas.<br> Móvil o Móvil + Fibra. <br> El  resto  #NoLoNecesito  
 						</span>
                         <img class="logo" src="https://i.imgur.com/5I6wyNR.jpg" alt="">
