--- a/HEB nov/Cube.html
+++ b/HEB nov/Cube.html
@@ -752,6 +752,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
         transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
 }
+/*#/#*//*#i5.i190.button.css:button/base/css*/
+#i190 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(235,30,2,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(235,30,2,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i190:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i190:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i190.i191.positioning.css:positioning/base/css.2*/
+#i190 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 108px; height: 30px;
+        -ms-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
+        transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
+}
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
@@ -763,17 +774,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i190.button.css:button/base/css*/
-#i190 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(235,30,2,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(235,30,2,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i190:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-#i190:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i190.i191.positioning.css:positioning/base/css.2*/
-#i190 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 108px; height: 30px;
-        -ms-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
-        transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
 }
 /*#/#*//*#i5.i200.image.css:image/base/css*/
 #i200 { opacity: 1; }
@@ -841,6 +841,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
         transform: translate(0, 0) translate(259px, 210px) rotate(0deg);
 }
+/*#/#*//*#i6.i192.button.css:button/base/css*/
+#i192 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(235,30,2,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(235,30,2,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i192:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i192:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i192.i193.positioning.css:positioning/base/css.2*/
+#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 108px; height: 30px;
+        -ms-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
+        transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
+}
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
 }
@@ -852,17 +863,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i6.i192.button.css:button/base/css*/
-#i192 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(235,30,2,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(235,30,2,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i192:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-#i192:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i192.i193.positioning.css:positioning/base/css.2*/
-#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 108px; height: 30px;
-        -ms-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
-        transform: translate(0, 0) translate(96px, 145px) rotate(0deg);
 }
 /*#/#*//*#i6.i194.image.css:image/base/css*/
 #i194 { opacity: 1; }
@@ -935,15 +935,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Este Cyber Lunes, ¿quieres unos zapatos nuevos al mejor precio?</div>
+<div id="i24">Este CiberMonday, ¿quieres unos zapatos nuevos al mejor precio?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/zHrJ4J0.png"/>
 <!--#/#--><!--#i5.i230.image.html:image/html-->
 <img id="i230" src="https://i.imgur.com/ThJYbDQ.png"/>
-<!--#/#--><!--#i5.i95.shape.html:shape/html-->
-<div id="i95"></div>
 <!--#/#--><!--#i5.i190.button.html:button/html-->
 <button id="i190">¡¡Ver más!!</button>
+<!--#/#--><!--#i5.i95.shape.html:shape/html-->
+<div id="i95"></div>
 <!--#/#--><!--#i5.i200.image.html:image/html-->
 <img id="i200" src="https://i.imgur.com/McmW7JZ.png"/>
 <!--#/#--><!--#i5.i204.image.html:image/html-->
@@ -957,15 +957,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¡¡Consigue este Cyber Lunes las mejores pantallas!!</div>
+<div id="i34">¡¡Consigue este CiberMonday los mejores perfumes!!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/3zp8Yoc.png"/>
+<img id="i60" src="https://i.imgur.com/YLsqSGa.png"/>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
 <img id="i232" src="https://i.imgur.com/ThJYbDQ.png"/>
-<!--#/#--><!--#i6.i99.shape.html:shape/html-->
-<div id="i99"></div>
 <!--#/#--><!--#i6.i192.button.html:button/html-->
 <button id="i192">¡¡Ver más!!</button>
+<!--#/#--><!--#i6.i99.shape.html:shape/html-->
+<div id="i99"></div>
 <!--#/#--><!--#i6.i194.image.html:image/html-->
 <img id="i194" src="https://i.imgur.com/McmW7JZ.png"/>
 <!--#/#--><!--#i6.i196.image.html:image/html-->
@@ -1023,7 +1023,7 @@ bmShow('i181');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i202.image.js:image/base/js*/
@@ -1036,7 +1036,7 @@ var el = document.getElementById('i202');
 
 el.addEventListener('click', function(e){
     /*#i216.i217.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1053,7 +1053,7 @@ var el = document.getElementById('i206');
 
 el.addEventListener('click', function(e){
     /*#i218.i219.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1070,7 +1070,7 @@ var el = document.getElementById('i210');
 
 el.addEventListener('click', function(e){
     /*#i224.i225.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1090,7 +1090,7 @@ bmShow('i230');
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i190.i191.positioning.js:positioning/base/js.2*/
@@ -1105,7 +1105,7 @@ var el = document.getElementById('i200');
 
 el.addEventListener('click', function(e){
     /*#i214.i215.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1122,7 +1122,7 @@ var el = document.getElementById('i204');
 
 el.addEventListener('click', function(e){
     /*#i220.i221.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1139,7 +1139,7 @@ var el = document.getElementById('i208');
 
 el.addEventListener('click', function(e){
     /*#i226.i227.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1159,7 +1159,7 @@ bmShow('i232');
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i192.i193.positioning.js:positioning/base/js.2*/
@@ -1174,7 +1174,7 @@ var el = document.getElementById('i194');
 
 el.addEventListener('click', function(e){
     /*#i212.i213.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1191,7 +1191,7 @@ var el = document.getElementById('i196');
 
 el.addEventListener('click', function(e){
     /*#i222.i223.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1208,7 +1208,7 @@ var el = document.getElementById('i198');
 
 el.addEventListener('click', function(e){
     /*#i228.i229.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.heb.com.mx/cyber-week'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.heb.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1307,14 +1307,14 @@ name: ThJYbDQ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i230.i231.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i95.shape.meta:shape/meta*/
-name: Link;
-/*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i190.button.meta:button/meta*/
 name: ¡¡Ver más!!;
 customName: false;
 /*#/#*//*#i190.i191.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i95.shape.meta:shape/meta*/
+name: Link;
+/*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i200.image.meta:image/meta*/
 name: McmW7JZ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
@@ -1351,14 +1351,14 @@ name: ThJYbDQ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i232.i233.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i99.shape.meta:shape/meta*/
-name: Link;
-/*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i192.button.meta:button/meta*/
 name: ¡¡Ver más!!;
 customName: false;
 /*#/#*//*#i192.i193.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i6.i99.shape.meta:shape/meta*/
+name: Link;
+/*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i194.image.meta:image/meta*/
 name: McmW7JZ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
