--- a/Delta 3/Fade.html
+++ b/Delta 3/Fade.html
@@ -67,15 +67,15 @@
         }
 
         .corona .bg.cover-1 {
-            background-image: url(https://i.imgur.com/DvkiRM7.png)
+            background-image: url(https://i.imgur.com/qYSVzoN.png)
         }
 
         .corona .bg.cover-2 {
-            background-image: url(https://i.imgur.com/2apsjOY.png)
+            background-image: url(https://i.imgur.com/Jd3HxSq.png)
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/WHw3zJC.png)
+            background-image: url(https://i.imgur.com/TPxX9Hm.png)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
@@ -268,7 +268,7 @@
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
         <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¿Te vienes?</span></div>
-        <a href="http://grupoaxo.com/marcas/speedo/" style="display: block;" target="_blank">
+        <a href="https://world.aeromexico.com/es/viaja-con-aeromexico/rutas-y-alianzas/alianzas/delta-airlines/?site=mx" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
