--- a/Delta 3/Slider.html
+++ b/Delta 3/Slider.html
@@ -265,12 +265,12 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-images">
-                    <img src="https://i.imgur.com/WWGOXyB.png" alt="" />
-                    <img src="https://i.imgur.com/vYPujJR.png" alt="" />
-                    <img src="https://i.imgur.com/qL7uQMS.png" alt="" />
+                    <img src="https://i.imgur.com/cJLv0eJ.png" alt="" />
+                    <img src="https://i.imgur.com/BsLOnmY.png" alt="" />
+                    <img src="https://i.imgur.com/PDpsHSy.png" alt="" />
                 </div>
                 <div class="te-cover">
-                    <img src="https://i.imgur.com/qL7uQMS.png" alt="" />
+                    <img src="https://i.imgur.com/PDpsHSy.png" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
