--- a/Delta 3/Slider.html
+++ b/Delta 3/Slider.html
@@ -53,8 +53,8 @@
         }
 
         .mustela .te-container {
-            width: 300px;
-            height: 600px;
+            width: 298px;
+            height: 598px;
             margin: 0 auto;
             background-color: #FFF;
             border: 1px solid #c5c5c5;
@@ -296,7 +296,7 @@
             
 						</span>
                         <div class="logo">
-                            <img src="ttps://i.imgur.com/YVvcSAJ.png" style="height:27px; ">
+                            <img src="https://i.imgur.com/YVvcSAJ.png" style="height:27px; ">
 
                         </div>
                     </div>
