--- a/Delta 3/Venetian.html
+++ b/Delta 3/Venetian.html
@@ -2190,22 +2190,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
 #i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 268px; height: 69px;
         -ms-transform: translate(0, 0) translate(18px, 495px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(18px, 495px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(18px, 495px) rotate(0deg);
         transform: translate(0, 0) translate(18px, 495px) rotate(0deg);
-}
-/*#/#*//*#i16.image.css:image/base/css*/
-#i16 { opacity: 1; }
-/*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 150px; height: 23px;
-        -ms-transform: translate(0, 0) translate(143px, 568px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(143px, 568px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(143px, 568px) rotate(0deg);
-        transform: translate(0, 0) translate(143px, 568px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2226,7 +2217,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i14.button.css:button/base/css*/
-#i14 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(25,75,133,1); font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 18px; border-color: rgba(25,75,133,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i14 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(166,48,48,1); font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 18px; border-color: rgba(166,48,48,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i14:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i14:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.2*/
@@ -2274,6 +2265,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(67px, 568px) rotate(0deg);
         transform: translate(0, 0) translate(67px, 568px) rotate(0deg);
 }
+/*#/#*//*#i44.image.css:image/base/css*/
+#i44 { opacity: 1; }
+/*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 180px; height: 28px;
+        -ms-transform: translate(0, 0) translate(112px, 564px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(112px, 564px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(112px, 564px) rotate(0deg);
+        transform: translate(0, 0) translate(112px, 564px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2281,10 +2281,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">¿Qué prefieres Nueva York o Los Ángeles?
+<div id="i12">¿Qué prefieres: Nueva York 
+o Los Ángeles?
 ¿Por qué no los dos?</div>
-<!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/YVvcSAJ.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2296,7 +2295,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i14.button.html:button/html-->
-<button id="i14">¿Te vienes?</button>
+<button id="i14">Conoce más</button>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#i32.image.html:image/html-->
@@ -2305,16 +2304,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i34" src="https://i.imgur.com/ct3Z8bp.png"/>
 <!--#/#--><!--#i36.image.html:image/html-->
 <img id="i36" src="https://i.imgur.com/WIKgKGv.png""/>
+<!--#/#--><!--#i44.image.html:image/html-->
+<img id="i44" src="https://i.imgur.com/8jnxoMj.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
 /*#/#*//*#i12.i13.positioning.js:positioning/base/js.2*/
 bmShow('i12');
-/*#/#*//*#i16.image.js:image/base/js*/
-
-/*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
-bmShow('i16');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2427,6 +2424,10 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i44.image.js:image/base/js*/
+
+/*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
+bmShow('i44');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2445,14 +2446,9 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: ¿Qué prefieres Nueva York o Los Ángeles? ¿Por qué no los dos?; customName: false;
+name: ¿Qué prefieres: Nueva York  o Los Ángeles? ¿Por qué no los dos?; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i16.image.meta:image/meta*/
-name: YVvcSAJ.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
@@ -2465,7 +2461,7 @@ name: PDpsHSy.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i14.button.meta:button/meta*/
-name: ¿Te vienes?;
+name: Conoce más;
 customName: false;
 /*#/#*//*#i14.i15.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
@@ -2488,5 +2484,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: WIKgKGv.png"; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i36.i37.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i44.image.meta:image/meta*/
+name: 8jnxoMj.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
