--- a/Corporganic/Fade2.html
+++ b/Corporganic/Fade2.html
@@ -261,7 +261,7 @@
 <body class="ClaroColombiaFade" style="margin:0px;">
   
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-       <div class="cta"><a href="https://goo.gl/maps/ixnPFVHq6tS2" target="_blank"> ¡¡Llévame ahora!!</a></div> 
+       <div class="cta"><a href="https://goo.gl/maps/ixnPFVHq6tS2" target="_blank"><b>¡¡Llévame ahora!!</b> </a></div> 
         
            <a href="https://goo.gl/maps/ixnPFVHq6tS2" target="_blank">
         
