--- a/Corporganic/Fade2.html
+++ b/Corporganic/Fade2.html
@@ -71,15 +71,15 @@
         }
 
         .ClaroColombiaFade .bg.cover-1 {
-            background-image: url(https://i.imgur.com/VPRnvgY.png)
+            background-image: url(https://i.imgur.com/BlGoMZN.png)
         }
 
         .ClaroColombiaFade .bg.cover-2 {
-            background-image: url(https://i.imgur.com/N4oYMqs.png)
+            background-image: url(https://i.imgur.com/0kMIsI8.png)
         }
 
         .ClaroColombiaFade .bg.cover-3 {
-            background-image: url(https://i.imgur.com/Y7OfMzJ.png)
+            background-image: url(https://i.imgur.com/mv9kMbq.png)
         }
 
         .ClaroColombiaFade .bzm_cover.bzm_pos_tl {
