--- a/Corporganic/Venetian2.html
+++ b/Corporganic/Venetian2.html
@@ -2207,26 +2207,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i46.text.css:text/base/css*/
-#i46 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #d60080; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(217,0,117,1); }
-/*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 144px; height: 18px;
-        -ms-transform: translate(0, 0) translate(6px, 7px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 7px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 7px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 7px) rotate(0deg);
-}
-/*#/#*//*#i48.text.css:text/base/css*/
-#i48 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #e3e3e3; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
-#i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 158px; height: 34px;
-        -ms-transform: translate(0, 0) translate(8px, 25px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(8px, 25px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(8px, 25px) rotate(0deg);
-        transform: translate(0, 0) translate(8px, 25px) rotate(0deg);
-}
 /*#/#*//*#i50.button.css:button/base/css*/
-#i50 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(237,2,129,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 0px; border-color: rgba(237,2,129,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i50 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(237,2,101,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 0px; border-color: rgba(237,2,101,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i50:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i50:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
@@ -2243,19 +2225,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/fPD8lO6.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/fFzQXnx.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/Y18ofmY.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/szJ4oSw.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/XUckdnA.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/GKMWfgu.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.shape.html:shape/html-->
 <div id="i42"></div>
-<!--#/#--><!--#i46.text.html:text/html-->
-<div id="i46">30% de descuento</div>
-<!--#/#--><!--#i48.text.html:text/html-->
-<div id="i48">hasta el 1 de Diciembre en Luz Pulsada</div>
 <!--#/#--><!--#i50.button.html:button/html-->
 <button id="i50">¡¡Llévame ahora!!</button>
 <!--#/#--><!--#/#--><!--#js:common/js-->
@@ -2319,10 +2297,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
-bmShow('i46');
-/*#/#*//*#i48.i49.positioning.js:positioning/base/js.2*/
-bmShow('i48');
 /*#/#*//*#i50.i51.positioning.js:positioning/base/js.2*/
 bmShow('i50');
 /*#/#*//*#i50.i52.actions.js:actions/base/js.1*/
@@ -2355,24 +2329,16 @@ function bmHide(id) {
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: fPD8lO6.png; fileId: ; sourceTypeId: externalUrl;
+name: fFzQXnx.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: Y18ofmY.png; fileId: ; sourceTypeId: externalUrl;
+name: szJ4oSw.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: XUckdnA.png; fileId: ; sourceTypeId: externalUrl;
+name: GKMWfgu.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i42.shape.meta:shape/meta*/
 name: Shape 2;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i46.text.meta:text/meta*/
-name: 30% de descuento; customName: false;
-/*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i48.text.meta:text/meta*/
-name: hasta el 1 de Diciembre en Luz Pulsada; customName: false;
-/*#/#*//*#i48.i49.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i50.button.meta:button/meta*/
 name: ¡¡Llévame ahora!!;
