--- a/Corporganic/Fade2.html
+++ b/Corporganic/Fade2.html
@@ -71,15 +71,15 @@
         }
 
         .ClaroColombiaFade .bg.cover-1 {
-            background-image: url(https://i.imgur.com/BlGoMZN.png)
+            background-image: url(https://i.imgur.com/1La3EpZ.png)
         }
 
         .ClaroColombiaFade .bg.cover-2 {
-            background-image: url(https://i.imgur.com/0kMIsI8.png)
+            background-image: url(https://i.imgur.com/VZ15vt8.png)
         }
 
         .ClaroColombiaFade .bg.cover-3 {
-            background-image: url(https://i.imgur.com/mv9kMbq.png)
+            background-image: url(https://i.imgur.com/nOrZhZC.png)
         }
 
         .ClaroColombiaFade .bzm_cover.bzm_pos_tl {
