--- a/Corporganic/Slider320x480-2.html
+++ b/Corporganic/Slider320x480-2.html
@@ -248,12 +248,12 @@
                  <a href="https://goo.gl/maps/ixnPFVHq6tS2" target="_blank">
                 
                 <div class="te-images">
-                    <img src="https://i.imgur.com/YTqEAAK.png" alt="" />
-                    <img src="https://i.imgur.com/r5EyAKk.png" alt="" />
-                    <img src="https://i.imgur.com/y4NUp7X.png" alt="" />
+                    <img src="https://i.imgur.com/bry7ImJ.png" alt="" />
+                    <img src="https://i.imgur.com/IOqxssS.png" alt="" />
+                    <img src="https://i.imgur.com/Hpb8gHR.png" alt="" />
                 </div>
                 <div class="te-cover">
-                    <img src="https://i.imgur.com/YTqEAAK.png" alt="" />
+                    <img src="https://i.imgur.com/IOqxssS.png" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
